--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <li><a href="#">ACCOMPLISHMENTS</a></li>
         <li class="dropdown"><a href="#"><span>DESIGNATION</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
-        <li><a href="#">OFFICIALS AND CHIEF OF OFFICES</a></li>
+        <li><a href="ecc_officials.html">OFFICIALS AND CHIEF OF OFFICES</a></li>
         <li><a href="#">EMPLOYEES</a></li>
       </ul>
       </li>
