--- a/ecc_officials.html
+++ b/ecc_officials.html
@@ -134,23 +134,30 @@
       <section id="ecc-officials" class="ecc-officials section">
         <!-- Section Title -->
         <div class="container officials position-relative dark-background" data-aos="fade-up">
-            <div>
-            <h1 class="fw-bold d-flex justify-content-center">EXECUTIVE OFFICIALS</h1>
-            <div class="container text-center">
+            <h1 class="fw-bold d-flex justify-content-center mb-2">EXECUTIVE OFFICIALS</h1>
+            <div class="container d-flex justify-content-center">
+              <div class="card-officials">
                 <div class="row">
-                  <div class="col">
-                    Column
+                  <div class="col-sm-3">
+                    <h4>LOCAL: </h4>
+                    <h4>LOCAL: </h4>
                   </div>
-                  <div class="col">
-                    Column
+                  <div class="col-sm-3">
+                    <h4>LOCAL: </h4>
+                    <h4>LOCAL: </h4>
                   </div>
-                  <div class="col">
-                    Column
+                  <div class="col-sm-3">
+                    <h4>LOCAL: </h4>
+                    <h4>LOCAL: </h4>
+                  </div>
+                  <div class="col-sm-3">
+                    <h4>LOCAL: </h4>
+                    <h4>LOCAL: </h4>
                   </div>
                 </div>
               </div>
+              </div>
             </div>
-        </div>
       </section>
       <!-- /Contact Section -->
     </main>
