add images, add ecc_faculty, add ecc_non-teachiing, ecc_program, changes in navbar, hero section and update ecc_officials

--- a/ecc_officials.html
+++ b/ecc_officials.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>EARIST - Cavite Campus</title>
+    <title>Officials and Chief Offices | EARIST - Cavite Campus</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -95,36 +95,20 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li class="dropdown">
-            <a href="#"
-              ><span>ABOUT</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
+          <li class="dropdown"><a href="#"><span>ABOUT</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="/ecc_history.html">ECC HISTORY</a></li>
+              <li><a href="ecc_officials.html">OFFICIALS AND CHIEF OF OFFICES</a></li>
             </ul>
           </li>
           <li><a href="#">ACCOMPLISHMENTS</a></li>
-          <li class="dropdown">
-            <a href="#"
-              ><span>DESIGNATION</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
+          <li class="dropdown"><a href="#"><span>EMPLOYEES</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">OFFICIALS AND CHIEF OF OFFICES</a></li>
-              <li><a href="#">EMPLOYEES</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#"
-              ><span>PROGRAM OFFERED</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
-            <ul>
-              <li><a href="#about">GRADUATE PROGRAMS</a></li>
-              <li><a href="#">UNDERGRADUATE PROGRAMS</a></li>
-            </ul>
-          </li>
+          <li><a href="ecc_faculty.html">REGULAR FACULTY</a></li>
+          <li><a href="ecc_non-teaching.html">NON - TEACHING</a></li>
+        </ul>
+        </li>
+        <li><a href="ecc_program.html">PROGRAM OFFERINGS</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -134,29 +118,193 @@
       <section id="ecc-officials" class="ecc-officials section">
         <!-- Section Title -->
         <div class="container officials position-relative dark-background" data-aos="fade-up">
-            <h1 class="fw-bold d-flex justify-content-center mb-2">EXECUTIVE OFFICIALS</h1>
+            <h1 class="fw-bold d-flex justify-content-center mb-2">ECC OFFICIALS AND CHIEF OF OFFICES</h1>
+            <!-- First Card -->
             <div class="container d-flex justify-content-center">
               <div class="card-officials">
                 <div class="row">
-                  <div class="col-sm-3">
-                    <h4>LOCAL: </h4>
-                    <h4>LOCAL: </h4>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                    <h4 class="fw-bold">Dr. Agnes N. Coo</h4>
+                    <p class="fw-bold">Campus Administrator
+                    <br><br><br><br><br><br><span class="fw-semibold">ancoo@earist.edu.ph</span></p>
                   </div>
-                  <div class="col-sm-3">
-                    <h4>LOCAL: </h4>
-                    <h4>LOCAL: </h4>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                    <h4 class="fw-bold">Mr. Enrico F. Abasolo</h4>
+                    <p class="fw-bold">Department Head, Administrative and PMS
+                    <br><br><br><br><br><span class="fw-semibold">efabasolo@earist.edu.ph</span></p>
                   </div>
-                  <div class="col-sm-3">
-                    <h4>LOCAL: </h4>
-                    <h4>LOCAL: </h4>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                    <h4 class="fw-bold">Mrs. Cecilia B. Surio</h4>
+                    <p class="fw-bold">Department Head, Student Affairs and Services
+                    <br><br><br><br><br><span class="fw-semibold">cbsurio@earist.edu.ph</span></p>
                   </div>
-                  <div class="col-sm-3">
-                    <h4>LOCAL: </h4>
-                    <h4>LOCAL: </h4>
+                  <div class="col-12 col-md-6 col-lg-3">
+                    <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                    <h4 class="fw-bold">Mrs. Rocelyn A. Peña</h4>
+                    <p class="fw-bold">Department Head, Student Administration & Registration Services 
+                    <br><br><br><br><span class="fw-semibold">rapeña@earist.edu.ph</span></p>
                   </div>
                 </div>
               </div>
               </div>
+              <!--Second Card -->
+              <div class="container mt-3 d-flex justify-content-center">
+                <div class="card-officials">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Dr. Rommuel E. Abanto</h4>
+                      <p class="fw-bold">Program Chair, BS Psychology
+                      <br><br><br><br><br><br><span class="fw-semibold">reabanto@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Dr. Shirley P. De Leon</h4>
+                      <p class="fw-bold">Program Chair, BTLE
+                      <br><br><br><br><br><br><span class="fw-semibold">spdeleon@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Andrew D. Intia</h4>
+                      <p class="fw-bold">Program Chair, BSBA; Career & Placement Services
+                      <br><br><br><br><br><span class="fw-semibold">adintia@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Edzel G. Peña</h4>
+                      <p class="fw-bold">Program Chair, BS Crim
+                      <br><br><br><br><br><br><span class="fw-semibold">egpeña@earist.edu.ph</span></p>
+                    </div>
+                  </div>
+                </div>
+                </div>
+              <!--Third Card -->
+              <div class="container mt-3 d-flex justify-content-center">
+                <div class="card-officials">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Anthony Jude C. Pael</h4>
+                      <p class="fw-bold">Program Chair, BSHM
+                      <br><br><br><br><br><br><span class="fw-semibold">ajcpael@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mrs. Catherine D. Dumpit</h4>
+                      <p class="fw-bold">Program Chair, BSCS
+                      <br><br><br><br><br><span class="fw-semibold">cddumpit@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Melvin G. Eballe</h4>
+                      <p class="fw-bold">Program Chair, BS Info Tech
+                      <br><br><br><br><br><br><span class="fw-semibold">mgeballe@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Roberto A. Turalba</h4>
+                      <p class="fw-bold">Program Chair, BSIT
+                      <br><br><br><br><br><br><span class="fw-semibold">raturalba@earist.edu.ph</span></p>
+                    </div>
+                  </div>
+                </div>
+                </div>
+              <!--Fourth Card -->
+              <div class="container mt-3 d-flex justify-content-center">
+                <div class="card-officials">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mrs. Nelia A. Ortega</h4>
+                      <p class="fw-bold">Program Chair, General Education
+                      <br><br><br><br><br><br><br><span class="fw-semibold">neortega@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Dr. Lyn R. Gondra</h4>
+                      <p class="fw-bold">Program Chair, BSOA
+                      <br><br><br><br><br><br><br><span class="fw-semibold">lrgondra@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Boniebert P. Luciano</h4>
+                      <p class="fw-bold">Program Chair, ICT <br>Program Chair, Extension and Production Services
+                      <br><br><br><br><br><span class="fw-semibold">bpluciano@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Dr. Yvonne O. Carandang</h4>
+                      <p class="fw-bold">Program Chair, NSTP and SDRRMS <br>Program Chair, Ed. D. / MAEd
+                      <br><br><br><br><br><span class="fw-semibold">yocarandang@earist.edu.ph</span></p>
+                    </div>
+                  </div>
+                </div>
+                </div>
+              <!--Fifth Card -->
+              <div class="container mt-3 d-flex justify-content-center">
+                <div class="card-officials">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Dr. Josephine S. Tuvilla</h4>
+                      <p class="fw-bold">Department Head, Research Services and BDU<br>Program Chair, MBA
+                      <br><br><br><br><br><span class="fw-semibold">jstuvilla@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Ms. Anna Mae L. Dublado</h4>
+                      <p class="fw-bold">Detailed Nurse, ECC Clinic
+                      <br><br><br><br><br><span class="fw-semibold"></span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mrs. Cecilia B. Surio</h4>
+                      <p class="fw-bold">College Librarian
+                      <br><br><br><br><br><span class="fw-semibold"></span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mrs. Cecil L. Ramos</h4>
+                      <p class="fw-bold">Chief, Campus Ministry / Interfaith Services
+                      <br><br><br><br><br><br><span class="fw-semibold">clramos@earist.edu.ph</span></p>
+                    </div>
+                  </div>
+                </div>
+                </div>
+              <!--Sixth Card -->
+              <div class="container mt-3 d-flex justify-content-center">
+                <div class="card-officials">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Mark Joseph A. Viado</h4>
+                      <p class="fw-bold">Program Chair, Guidance and Counseling Services <br>Program Chair, Leadership and Scholarship Services 
+                      <br><br><br><br><br><span class="fw-semibold">mjaviado@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. Eugene Paolo Z. Guades</h4>
+                      <p class="fw-bold">Chief, Gender and Development
+                      <br><br><br><br><br><br><br><span class="fw-semibold">epzguades@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Mr. John Darrel J. Medina</h4>
+                      <p class="fw-bold">Administrative Assistant, Office of the Campus Administrator
+                      <br><br><br><br><br><br><span class="fw-semibold">jdjmedina@earist.edu.ph</span></p>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                      <h4 class="mt-4 fw-bold">LOCAL: </h4>
+                      <h4 class="fw-bold">Dr. Joselito D. Mabansag</h4>
+                      <p class="fw-bold">OIC-Dean, Graduate School
+                      <br><br><br><br><br><br><br><br><span class="fw-semibold">jdmabansag@earist.edu.ph</span></p>
+                    </div>
+                  </div>
+                </div>
+                </div>
             </div>
       </section>
       <!-- /Contact Section -->
