--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>EARIST - Cavite Campus</title>
+  <title>Home | EARIST - Cavite Campus</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -67,21 +67,17 @@
         <li class="dropdown"><a href="#"><span>ABOUT</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="/ecc_history.html">ECC HISTORY</a></li>
+            <li><a href="ecc_officials.html">OFFICIALS AND CHIEF OF OFFICES</a></li>
           </ul>
         </li>
         <li><a href="#">ACCOMPLISHMENTS</a></li>
-        <li class="dropdown"><a href="#"><span>DESIGNATION</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+        <li class="dropdown"><a href="#"><span>EMPLOYEES</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
-        <li><a href="ecc_officials.html">OFFICIALS AND CHIEF OF OFFICES</a></li>
-        <li><a href="#">EMPLOYEES</a></li>
+        <li><a href="ecc_faculty.html">REGULAR FACULTY</a></li>
+        <li><a href="ecc_non-teaching.html">NON - TEACHING</a></li>
       </ul>
       </li>
-        <li class="dropdown"><a href="#"><span>PROGRAM OFFERED</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li><a href="#about">GRADUATE PROGRAMS</a></li>
-            <li><a href="#">UNDERGRADUATE PROGRAMS</a></li>
-          </ul>
-        </li>
+      <li><a href="ecc_program.html">PROGRAM OFFERINGS</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
@@ -94,28 +90,27 @@
 
       <img src="assets/img/facade.png" alt="" data-aos="fade-in">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row justify-content-start">
-          <div class="col-lg-8">
-            <h2>Welcome to EARIST - CAVITE CAMPUS</h2>
-            <p>(GENERAL ALVAREZ SCHOOL OF ARTS AND TRADES)</p>
-            <a href="#about" class="btn-get-started">Get Started</a>
-          </div>
+      <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
+        <div class="row d-flex justify-content-center">
+            <div class="col-12">
+              <h2>Welcome to EARIST - CAVITE CAMPUS</h2>
+              <p>(GENERAL ALVAREZ SCHOOL OF ARTS AND TRADES)</p>
+            </div>
         </div>
-      </div>
+    </div>
 
     </section><!-- /Hero Section -->
 
 
 
-    <!-- Contact Section -->
+    <!-- Contact Section
     <section id="contact" class="contact section">
 
-      <!-- Section Title -->
+      
       <div class="container section-title" data-aos="fade-up">
         <span>ABOUT</span>
         <h2>ABOUT</h2>
-          </div><!-- End Contact Form -->
+          </div>
 
         </div>
 
