--- a/ecc_history.html
+++ b/ecc_history.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>EARIST - Cavite Campus</title>
+    <title>ECC History | EARIST - Cavite Campus</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -95,36 +95,20 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li class="dropdown">
-            <a href="#"
-              ><span>ABOUT</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
+          <li class="dropdown"><a href="#"><span>ABOUT</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="/ecc_history.html">ECC HISTORY</a></li>
+              <li><a href="ecc_officials.html">OFFICIALS AND CHIEF OF OFFICES</a></li>
             </ul>
           </li>
           <li><a href="#">ACCOMPLISHMENTS</a></li>
-          <li class="dropdown">
-            <a href="#"
-              ><span>DESIGNATION</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
+          <li class="dropdown"><a href="#"><span>EMPLOYEES</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">OFFICIALS AND CHIEF OF OFFICES</a></li>
-              <li><a href="#">EMPLOYEES</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#"
-              ><span>PROGRAM OFFERED</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
-            <ul>
-              <li><a href="#about">GRADUATE PROGRAMS</a></li>
-              <li><a href="#">UNDERGRADUATE PROGRAMS</a></li>
-            </ul>
-          </li>
+          <li><a href="ecc_faculty.html">REGULAR FACULTY</a></li>
+          <li><a href="ecc_non-teaching.html">NON - TEACHING</a></li>
+        </ul>
+        </li>
+        <li><a href="ecc_program.html">PROGRAM OFFERINGS</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
